# DeMLopment-Example

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  conf.py  pyproject.toml  requirements.txt
docs/: development_notes.rst  development_notes.txt  index.rst
docs/posts/: deMLopment.rst  endpoint.rst  serving_manage_monitor.rst
notebooks/: Inference.ipynb
refs/: refs.txt
scripts/: convert_torchscript.py
src/character_recognizer/: endpoint_inference.py  inference.py  mnist.py  transform.py  utils.py
tests/: test_inference.py
torchserve/: mnist_handler.py
web_app/: server.py
