[project]
name = "character-recognizer"
version = "0.0.1"
description = "A Handwritten Character Image Recognizer (EN)."
authors = [
    {name = "Sanjeev Malalur", email = "sanjeev.malalur@gmail.com"},
]
dependencies = [
    "torch>=1.12.1",
    "typer[all]>=0.6.1",
    "torchvision>=0.13.1",
    "pre-commit>=2.20.0",
    "torch-model-archiver>=0.6.0",
    "torch-workflow-archiver>=0.2.4",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]

[tool.black]
line-length = 120
target-version = ["py37"]
